--- a/src/components/CardFilter/CardFilter.scss
+++ b/src/components/CardFilter/CardFilter.scss
@@ -11,9 +11,9 @@
   margin: 1rem;
 }
 
-.WhiteTraits{
-    display: flex;
-    flex-direction: column;
+.TraitListWrapper {
+  display: flex;
+  margin: 1rem;
 }
 
 @media screen and (max-width: 768px) {
